feat(bk): CLI